# ChangeLog for app-admin/puppet
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.21 2008/09/09 09:20:04 matsuu Exp $

*puppet-0.24.5-r1 (09 Sep 2008)

  09 Sep 2008; MATSUU Takuto <matsuu@gentoo.org> +files/puppet.init,
  files/puppetmaster.init, +puppet-0.24.5-r1.ebuild:
  Fixed init.d issue, bug 237071.

*puppet-0.24.5 (13 Aug 2008)

  13 Aug 2008; MATSUU Takuto <matsuu@gentoo.org>
  -files/puppet-0.23.2-gentoo.patch, -files/puppet-0.24.1-gentoo.patch,
  -files/puppet-0.24.1-service.patch, -puppet-0.23.2-r1.ebuild,
  -puppet-0.24.1-r1.ebuild, -puppet-0.24.3.ebuild, +puppet-0.24.5.ebuild:
  Version bumped. Removed old versions.

  13 Aug 2008; Ferris McCormick <fmccor@gentoo.org> puppet-0.24.4.ebuild:
  Add ~sparc keyword at user (Juan Daza) request --- Bug #234621.

  26 Jun 2008; Thomas Anderson <gentoofan23@gentoo.org>
  puppet-0.24.4.ebuild:
  stable amd64, bug 227375

  20 Jun 2008; Christian Faulhammer <opfer@gentoo.org> puppet-0.24.4.ebuild:
  stable x86, bug 227375

  16 Jun 2008; nixnut <nixnut@gentoo.org> puppet-0.24.4.ebuild:
  Stable on ppc wrt bug 227375

  16 Jun 2008; Tiziano Müller <dev-zero@gentoo.org>
  +files/puppet-0.24.4-openrc_initd.patch, files/puppetmaster.init,
  puppet-0.24.4.ebuild:
  Added fix to make scripts work with baselayout-2/openrc (bug #218071)

  01 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  puppet-0.24.4.ebuild:
  Added ~ppc

*puppet-0.24.4 (03 Apr 2008)

  03 Apr 2008; MATSUU Takuto <matsuu@gentoo.org> +puppet-0.24.4.ebuild:
  Version bumped, bug #215425.

*puppet-0.24.3 (20 Mar 2008)

  20 Mar 2008; MATSUU Takuto <matsuu@gentoo.org> -puppet-0.24.1.ebuild,
  -puppet-0.24.2.ebuild, +puppet-0.24.3.ebuild:
  Version bumped, bug #214085.
  Removed old versions.

*puppet-0.24.2 (05 Mar 2008)

  05 Mar 2008; MATSUU Takuto <matsuu@gentoo.org>
  +files/puppet-0.24.2-gentoo.patch, +files/puppetmaster.init,
  +puppet-0.24.2.ebuild: